# braindump.ing

./: .gitignore  CNAME  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
.husky/: pre-commit
include/: [slug].html  index.html  note.html  seo.html  wrapper.html  writing.html
include/components/: header.html
include/scripts/: aesthetics.ts  email.ts
include/styles/: aesthetics.scss  globals.scss  main.scss  mjx.css  prism.css
layout/: list.html  wrapper.html  writing.html
routes/: 2026-07-31-figma-font-editor.md  about.md  aesthetics.html  index.md
routes/note/: test.md
routes/post/: 2026-01-16-blog.md  2030-01-01-hopes-interests.md
routes/writing/: 2026-01-16-blog.md  2026-06-24-blog.md  2030-01-01-hopes-interests.md
src/: braindumping.cabal  datetime.hs  main.hs  transform.js
src/app/: Datetime.hs  Email.hs  Extensions.hs  Main.hs  Markdown.hs  Notes.hs  Parser.hs  Utils.hs  Writing.hs
