cabal-version:      3.0
name:               braindumping
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             jc
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ssg
    import:           warnings
    main-is:          Main.hs
    other-modules:    Markdown,
                      Parser,
                      Extensions,
                      Utils
    -- other-extensions:
    build-depends:    base >=4.18.3.0,
                      containers ^>=0.6.7,
                      directory >= 1.3.0,
                      process >= 1.6.0
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -dynamic

executable email
    import:           warnings
    main-is:          Email.hs
    -- other-extensions:
    build-depends:    base >=4.18.3.0,
                      containers ^>=0.6.7,
                      directory >= 1.3.0,
                      process >= 1.6.0
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -dynamic
